<?xml version="1.0"?>
<package format="2">
  <name>video</name>
  <version>0.0.1</version>
  <description>video package</description>
  <maintainer email="barbara.symeon.001@uni.lu">Barbara Symeon</maintainer>
  <license>...</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>



</package>
